tests/integration/fail/math_min_arg_error.kr
# Test min function argument count error

# min with no args
set m to call min
# Expected: Runtime error - min expects at least 1 argument

